# framepack-pe

./: .dockerignore  .gitignore  Dockerfile  PLAN.md  README.md  api_preview_plan.md  api_thumbnail_plan.md  conftest.py  convert_torch_tinygrad.json  demo.py  demo_gradio.py  demo_gradio_cpu.py  demo_gradio_f1.py  magcache_demo_gradio.py  magcache_demo_gradio_f1.py  magcache_demo_gradio_wo_teacache.py  pyproject.toml  quick_prompts.json  requirements.txt  requirements_m3.txt  run_demo.sh  test_mac_support.py  test_mps_attention.py  test_mps_basic.py  translations.json
.github/workflows/: ci.yml
api/: api.py  models.py  queue_manager.py  settings.py  video_watcher.py  worker.py
diffusers_helper/: device_config.py  load_lora.py  memory.py  utils.py
diffusers_helper/models/: hunyuan_video_packed.py
diffusers_helper/pipelines/: k_diffusion_hunyuan.py
docs/: mac_support.md
modules/: interface.py  prompt_handler.py
plan/: api_plan.md  api_sampling_mode_plan.md  api_thumbnail_plan.md  docker_plan.md  progress_sse_plan.md  queue_explanation.md  video continuous_playback_plan.md
tests/: test_api.py
unsloth/: chat_templates.py
