[project]
name = "framepack-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==1.6.0",
    "aiofiles==23.2.1",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "av==12.1.0",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "colorama==0.4.6",
    "diffusers==0.33.1",
    "einops==0.8.1",
    "exceptiongroup==1.2.2",
    "fastapi==0.115.12",
    "ffmpy==0.5.0",
    "filelock==3.13.1",
    # "flash-attn"
    "fsspec==2024.6.1",
    "gradio==5.23.0",
    "gradio-client==1.8.0",
    "groovy==0.1.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "huggingface-hub==0.30.2",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "iniconfig==2.1.0",
    "jinja2==3.1.4",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "networkx==3.3",
    "numpy==1.26.2",
    "opencv-contrib-python==4.11.0.86",
    "orjson==3.10.18",
    "packaging==25.0",
    "pandas==2.2.3",
    "peft==0.15.2",
    "pillow==11.1.0",
    "pluggy==1.5.0",
    "psutil==7.0.0",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pydub==0.25.1",
    "pygments==2.19.1",
    "pytest==8.3.5",
    "pytest-mock==3.14.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.31.0",
    "rich==14.0.0",
    "ruff==0.11.8",
    "safehttpx==0.1.6",
    "safetensors==0.5.3",
    # "sageattention"
    "scipy==1.12.0",
    "semantic-version==2.10.0",
    "sentencepiece==0.2.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.46.2",
    "sympy==1.13.3",
    "tokenizers==0.20.3",
    "tomli==2.2.1",
    "tomlkit==0.13.2",
    "torch==2.7.0+cu126",
    "torchaudio==2.7.0+cu126",
    "torchsde==0.2.6",
    "torchvision==0.22.0+cu126",
    "tqdm==4.67.1",
    "trampoline==0.1.2",
    "transformers==4.46.2",
    # "triton"
    "typer==0.15.3",
    "typing-extensions==4.12.2",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "uvicorn==0.34.2",
    "watchdog==6.0.0",
    "watchfiles==1.0.5",
    "websockets==15.0.1",
    "xformers==0.0.30",
    "zipp==3.21.0"
]